welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: ')' expected but '<-' found.
    fro(j<- 0 to getMondeHauteur()){
         ^ColumnByColumn:3: error: ';' expected but ')' found.
    fro(j<- 0 to getMondeHauteur()){
                                  ^