welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  var num= 0
  for(i<- 0 to getMondeLargeur()){
    fro(j<- 0 to getMondeHauteur()){
      setPos(i, j)
      ecritMessage(" num ")
      num +=1
    }
  }
}